# graphos

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASE.md  package.json  pnpm-lock.yaml
assets/: logo-system.html
docs/blog/: benchmark-story-graphos.md  v1-launch.md
examples/budget-demo/: package.json
examples/budget-demo/src/: index.ts
examples/loop-demo/: package.json
examples/loop-demo/src/: index.ts
python/: README.md  pyproject.toml
python/src/graphos_io/: __init__.py  _canonical.py  errors.py  types.py  wrap.py
python/src/graphos_io/policies/: __init__.py  budget_guard.py  loop_guard.py  mcp_guard.py  token_cost.py
python/src/graphos_io/transport/: __init__.py  websocket.py
python/tests/: conftest.py  test_budget_guard.py  test_loop_guard.py  test_mcp_guard.py  test_token_cost.py  test_websocket_transport.py  test_wrap.py
